adding advertisement api to show advertisment banner to the header, footer and sidebar

--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -1220,6 +1220,12 @@ font-family:serif;
 	width: auto;
 	float: left;	
 	}
+.img_outer_ban img {
+    max-height: 100px;
+}
+.company_adds img {
+    max-height: 100px;
+}	
 
 }
 
