wired up my treatment centers page and completed api integration

--- a/app/components/profileNavSection/view.html
+++ b/app/components/profileNavSection/view.html
@@ -6,7 +6,7 @@
         <li>
           <div class="img_outer_user_pic">
             <div class="img_inner_user_pic">
-              <img ng-src="{{ $ctrl.profilePic }}" class="img-circle">
+              <img ng-src="{{ $ctrl.profilePic }}" class="img-circle"/>
             </div>
           </div>
         </li>
