--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -15,8 +15,8 @@
 
 
  screen and (-webkit-min-device-pixel-ratio:0){
-	
-.new_class_for_label input { box-shadow:none !important;	}	
+
+.new_class_for_label input { box-shadow:none !important;	}
 #img_upload{ padding-top: 10px;}
 }
 
@@ -35,9 +35,9 @@
 }
 
 @media (max-width:1200px){
-	
+
 .padding_left_new{ padding-left:0px !important;}
-.right_header_2{ margin-right:0px !important; }	
+.right_header_2{ margin-right:0px !important; }
 
 .nav_align{width:auto !important;}
 
@@ -45,9 +45,9 @@
 @media (max-width:1200px) and (min-width:992px)
 {
 .width_adjust_header{width:100%;float: left;}
-.navbar-collapse .right_header_2{float:left;}				 
+.navbar-collapse .right_header_2{float:left;}
 .navbar-collapse {float:right !important;}
-.header_main_menu{float:left !important;}				 
+.header_main_menu{float:left !important;}
 .to_be_pull_left{float:left;}
 .navbar-brand{ padding:0px !important;}
 }
@@ -56,22 +56,22 @@
 	}
 
 @media (max-width:991px) and (min-width:768px)
-{			
+{
 
 		.contact_info_wrap_div{ margin-top:15px;}
 	/* Google Ads*/
-	
-/*.margin_top_55{margin-top:15px !important;} */	
-	
+
+/*.margin_top_55{margin-top:15px !important;} */
+
 	/* Google Ads*/
- 
+
   /*
   .header_main_menu.pull-right {
     float: right;
     width: auto;
   }
   */
-  
+
   .new_class_for_collaspe.collapse {display: none !important;}
   .navbar-collapse.collapse.in {
     display: block !important;
@@ -84,7 +84,7 @@
     .navbar-toggle {
         display: block;
     }
-    .navbar-collapse {        
+    .navbar-collapse {
 		border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
 		 max-height: 340px;
@@ -121,7 +121,7 @@
 	}
 @media  (max-width:320px) and (min-width: 240px){
 	#no-more-tables td{ font-size: 12px !important;}
-	.sign_up_box_inner	.absolute_div_user{left:33% !important ;}	
+	.sign_up_box_inner	.absolute_div_user{left:33% !important ;}
 	.toggle_button{margin-top:0px !important;float:left !important;}
 	.toggle_header>img{float:left;width: 100%;}
 	.main_wrap_form_profile .col-xs-6{ clear:left;width:100%;}
@@ -131,7 +131,7 @@
 .img_inner_user_pic{float:left !important;;width: 100% !important;margin: 0 0px !important;}
 	}
 	@media  (max-width:480px) and (min-width: 320px){
-	.sign_up_box_inner	.absolute_div_user{left:38% !important ;}	
+	.sign_up_box_inner	.absolute_div_user{left:38% !important ;}
 	.main_wrap_form_profile .col-xs-6{ clear:left;width:100%;}
 .thumbnail-scroller.horizontal{ padding-left: 0px !important;  padding-right: 0px !important;}
 	.thumbnails-visible-container.grab{width:156px !important;  margin-left: 20%;  }
@@ -141,17 +141,17 @@
 	.glossy-square-gray .thumbnail-scroller.horizontal .arrows a.previous{left: 12% !important;}
 
 */
-	
+
 	}
 @media  (max-width:600px) and (min-width: 480px){
-	
+
 	.glossy-square-gray .thumbnail-scroller.horizontal .arrows a.next{left: 135% !important;}
 	.thumbnails-visible-container.grab{ margin-left:22px !important; }
 
 }
-	
-	
-	
+
+
+
 @media  (min-width:768px) and (max-width: 991px)
 {
 .thumbnail-scroller.horizontal{max-width: 575px !important;}
@@ -161,11 +161,11 @@
 .inner_slider_div{top: 47px!important;width: 46% !important;left: 42px!important;}
 }
 @media only screen and (max-width: 768px)
-{		.media{text-align: center;width: 100%;}	
+{		.media{text-align: center;width: 100%;}
 		.media	.media-body {clear:left;width: 100%;display: inline-block;}
 		.media a{float:none !important;margin:0 auto;display: inline-block;text-align: center;width: 100%; margin-right:0px; }
 		.media img{float:none !important;margin:0 auto;display: inline-block;text-align: center;margin-bottom: 10px ;}
-			.margin_top_in_xs{ margin-top:15px;}	
+			.margin_top_in_xs{ margin-top:15px;}
 	.contact_info_wrap_div{ margin-top:15px;}
 	#submit_profile{ margin-left:15px !important ; }
 	.listing_wrapper_inner{ border-left: none !important;}
@@ -189,7 +189,7 @@
 	.navbar-collapse { padding-left: 15px;  padding-right: 15px;}
 	.margin_top_55{margin-top:15px !important;}
 	.margin_top_108{margin-top:15px !important;}
-  
+
 }
 
 .padding_0{padding:0;}
@@ -203,7 +203,7 @@ p{ color: #555;font-family: arial;font-size: 13px;}
 .left_header>p{ font-family: 'oswaldbook';font-size:13px;padding-top:7px;}
 .navbar{min-height:10px;border:none;margin-bottom:0!important;background:#fff;box-shadow:0 1px 0 rgba(0, 0, 0, 0.1);}
 .left_header>p>span{color:#73ac4b;}
-.navbar-header .navbar-brand{height:auto;}      
+.navbar-header .navbar-brand{height:auto;}
 .nav>li >a{text-transform:uppercase;color:#333333!important;font-size:13.5px;margin-right:5px;}
 .nav>li  .active{color:#115A8F!important;border-bottom:2px solid;}
 .nav>li >a:hover{color:#115A8F!important;border-bottom:2px solid #115A8F;}
@@ -326,14 +326,14 @@ border-radius: 5px;}
 
 
 /* carousel */
-.media-carousel 
+.media-carousel
 {
   margin-bottom: 0;
   padding: 0 40px 30px 40px;
 
 }
 /* Previous button  */
-.media-carousel .carousel-control.left 
+.media-carousel .carousel-control.left
 {
   left: -12px;
   background-image: none;
@@ -346,7 +346,7 @@ border-radius: 5px;}
   top:50%;
 }
 /* Next button  */
-.media-carousel .carousel-control.right 
+.media-carousel .carousel-control.right
 {
   right: -12px !important;
   background-image: none;
@@ -359,7 +359,7 @@ border-radius: 5px;}
   top:50%;
 }
 /* Changes the position of the indicators */
-.media-carousel .carousel-indicators 
+.media-carousel .carousel-indicators
 {
   right: 50%;
   top: auto;
@@ -367,11 +367,11 @@ border-radius: 5px;}
   margin-right: -19px;
 }
 /* Changes the colour of the indicators */
-.media-carousel .carousel-indicators li 
+.media-carousel .carousel-indicators li
 {
   background: #c0c0c0;
 }
-.media-carousel .carousel-indicators .active 
+.media-carousel .carousel-indicators .active
 {
   background: #333333;
 }
@@ -387,26 +387,26 @@ border-radius: 5px;}
     float: left;
     font-size: 14px;
     font-family: arial;
-			width:100%;    
+			width:100%;
     }
-    
+
 /*   Sign In  Form Css Modal   */
 .modal.fade.in {
 	z-index: 999999;
- 
+
 }
 .modal_btn{background:#73ac4b; border-color:#73ac4b ; margin-left:5px;min-width:72px;}
 .modal_btn:hover , .modal_btn:focus ,.modal_btn:active{background:#58aa22 ;border-color:#73ac4b}
 .modal-body .checkbox_modal_g{position: relative !important; margin-left:0 !important;}
 .font_weight_normal{font-weight:normal;}
 .heading_modal{color:#2172a7; font-size:16px; }
-.footer_block{display: inline-block;width: 100%;}    
-.body_block{width:100%;display: inline-block;}    
+.footer_block{display: inline-block;width: 100%;}
+.body_block{width:100%;display: inline-block;}
 .modal-body label{margin-bottom: 4px !important;}
 .modal_inner_adj{ padding-top:7px;}
 .forgot_pwd , .not_mem{width:100%;word-wrap:break-word;text-align: center; font-size:14px; font-weight:normal;color:#333;display:inline-block;}
-.forgot_pwd a, .not_mem a{color:#2172a7;text-decoration: none;} 
-.forgot_pwd a:hover, .not_mem a:hover{color:#428bca;} 
+.forgot_pwd a, .not_mem a{color:#2172a7;text-decoration: none;}
+.forgot_pwd a:hover, .not_mem a:hover{color:#428bca;}
 .border_radius_add{ border-radius: 24px;width: 100%;margin: 0;}
 
 .padding_box_modal_sign{padding:20px;border:2px solid #ddd;min-height:64px;width: 100%;}
@@ -441,7 +441,7 @@ h3.sub_heading_under_sign_up{ margin: 30px 0 10px !important;}
 .img_outer{float:left; width:100%;padding: 10px 10px 10px 0;}
 .img_outer img{float:left; width:100%;}
 .header_bg_texture{background:url(../images/header-bg_pattern.png) repeat;}
-/*  Sign In   Form css Modal  */    
+/*  Sign In   Form css Modal  */
 
 
 /* Listing Page     */
@@ -471,12 +471,12 @@ h3.sub_heading_under_sign_up{ margin: 30px 0 10px !important;}
     opacity: 0.5 !important;
 			-moz-opacity:0.5  !important;
 			-webkit-opacity:0.5  !important;
-			-ms-opacity:0.5  !important;   
+			-ms-opacity:0.5  !important;
 }
 /* Listing Page     */
-    
+
 /*      24 July      */
-	
+
 .contaimer	 .new_class_for_sub_menu li ul li a:hover{color:#73ac4b !important;}
 .contaimer	 .new_class_for_sub_menu li ul li a:active{color:#73ac4b  !important;}
 .contaimer	 .new_class_for_sub_menu li ul li a:focus{color:#73ac4b  !important;}
@@ -532,7 +532,7 @@ h3.sub_heading_under_sign_up{ margin: 30px 0 10px !important;}
 .img_under_block_outer{float:left;width: 100%;background:#444;}
 .img_under_block_outer img{float:left;width: 100%;  border-bottom: 2px solid #b1b1b1;}
 .head_under_block{float: left; width: 100%; padding: 10px 0 1px;background:#fff;  position: relative;}
-.head_under_block a{text-decoration: none;}	
+.head_under_block a{text-decoration: none;}
 .desc_under_block{float:left; width: 100%;  padding: 6px;min-height:83px;}
 .desc_under_block p{word-wrap:break-word;text-align: left;display: block; font-size: 14px; width: 100%;float:left;color: #444;}
 .listing_wrap:hover .head_under_block{
@@ -589,7 +589,7 @@ h3.sub_heading_under_sign_up{ margin: 30px 0 10px !important;}
 
 .bg_add_treat:hover , .bg_add_treat:active , .bg_add_treat:focus{  background: none repeat scroll 0 0 #115a8f; text-decoration: none;color:#fff; }
 
-.bg_add_treat{ 
+.bg_add_treat{
 				float: right;
 		  background: none repeat scroll 0 0 #2172a7;
     color: #ffffff;
@@ -615,27 +615,27 @@ h3.sub_heading_under_sign_up{ margin: 30px 0 10px !important;}
 #img_upload{cursor:pointer;}
 
 /*    Account Settings    */
-    
+
 /*    Add Treatment Center       */
 .class_for_select .bootstrap-select > .btn{height:40px; font-size:14px; }
 .margin_top_25{ margin-top:25px;}
-/*    Add Treatment Center       */    
+/*    Add Treatment Center       */
 
 /* my Center View */
 
 
-.img_outer_in_treat_page{float: left;width: 100%;display:inline-block;}    
-.img_inner_in_treat_page{float: left;width: 100%; display:inline-block;padding:15px;}    
-.img_inner_in_treat_page img{float: left;width: 100% ; display:block;}    
+.img_outer_in_treat_page{float: left;width: 100%;display:inline-block;}
+.img_inner_in_treat_page{float: left;width: 100%; display:inline-block;padding:15px;}
+.img_inner_in_treat_page img{float: left;width: 100% ; display:block;}
 
 
-        
-/* my Center View */        
 
-		
+/* my Center View */
+
+
 /***detail view page start from here****/
 
-.banner_main{float:left; width:100%; 
+.banner_main{float:left; width:100%;
 }
 .detail_form_main{float:left; width:100%; margin:50px 0 0 0; background:#f2f2f2;}
 .detail_inner label{color: #2172A7;
@@ -691,10 +691,9 @@ h3.sub_heading_under_sign_up{ margin: 30px 0 10px !important;}
 
 /*    No More Tables Advertisements      */
 
- .block_make{display: inline-block !important;}		
- .width_adjust_tb{width: 135px;}	
-	#no-more-tables .table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th{ background-color:#fff}	
-	#no-more-tables .table-striped > tbody > tr > td, .table-striped > tbody > tr > th{ background-color:#f9f9f9;border-bottom:1px solid #ddd;}	
+ .block_make{display: inline-block !important;}
+#no-more-tables .table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th{ background-color:#fff}
+	#no-more-tables .table-striped > tbody > tr > td, .table-striped > tbody > tr > th{ background-color:#f9f9f9;border-bottom:1px solid #ddd;}
 	#no-more-tables th{ font-size: 17px; font-weight: normal; text-align: center; background-color:#2172a7;color:#fff;min-width:135px; }
 	#no-more-tables td{ font-size: 14px; font-weight: normal; text-align: center;}
 	#no-more-tables{float:left;width: 100%;border:1px solid #ddd;}
@@ -702,70 +701,80 @@ h3.sub_heading_under_sign_up{ margin: 30px 0 10px !important;}
 	#no-more-tables a:hover{color:#444 ; text-decoration: none; }
 	.img_outer_in_tb{float:left;width: 100%;}
 	.img_inner_in_tb{width: 100%;float:left;}
-	.img_inner_in_tb img{float:left;width: 100%;}
+	.img_inner_in_tb img {
+    font-family: 'Helvetica';
+    font-weight: 300;
+    line-height: 2;
+    text-align: center;
+    width: 100%;
+    height: auto;
+    display: block;
+    position: relative;
+  }
+
 	/*.img_inner_in_tb img:hover{box-shadow:0 4px 4px #444;-moz-box-shadow:0 4px 4px #444;-ms-box-shadow:0 4px 4px #444;-webkit-box-shadow:0 4px 4px #444;-o-box-shadow:0 4px 4px #444;}*/
 	#no-more-tables:hover{box-shadow:0 4px 4px #999 ;-moz-box-shadow:0 4px 4px #999;-ms-box-shadow:0 4px 4px #999;-webkit-box-shadow:0 4px 4px #999;-o-box-shadow:0 4px 4px #999;
- 	
+
 -webkit-transition: all .25s ease-in-out;
 -moz-transition: all .25s ease-in-out;
 -ms-transition: all .25s ease-in-out;
 -o-transition: all .25s ease-in-out;
-transition: all .25s ease-in-out;	
+transition: all .25s ease-in-out;
 }
 .pagination-div{margin:20px 0 0;}
-	
+
 @media only screen and (max-width: 992px) {
-  
-		.block_make:before{top:50% !important;}    
-    
+
+		.block_make:before{top:50% !important;}
+
 /* Force table to not be like tables anymore */
-	
-	
-	 
-	#no-more-tables table, 
-	#no-more-tables thead, 
-	#no-more-tables tbody, 
-	#no-more-tables th, 
-	#no-more-tables td, 
-	#no-more-tables tr { 
-		display: block; 
+
+
+
+	#no-more-tables table,
+	#no-more-tables thead,
+	#no-more-tables tbody,
+	#no-more-tables th,
+	#no-more-tables td,
+	#no-more-tables tr {
+		display: block;
 	}
- 
+
 	/* Hide table headers (but not display: none;, for accessibility) */
-	#no-more-tables thead tr { 
+	#no-more-tables thead tr {
 		position: absolute;
 		top: -9999px;
 		left: -9999px;
 	}
- 
+
 	#no-more-tables tr { border: 1px solid #ccc; }
- 
-	#no-more-tables td { 
+
+	#no-more-tables td {
 		/* Behave  like a "row" */
 		color:#444;
 		border: none;
-		border-bottom: 1px solid #eee; 
+		border-bottom: 1px solid #eee;
 		position: relative;
-		padding-left: 50%; 
+		padding-left: 50%;
 		white-space: normal;
 		word-wrap: break-all;
 		text-align:center;
 		vertical-align: middle;
 	}
- 
-	#no-more-tables td:before { 
+
+	#no-more-tables td:before {
 		/* Now like a table header */
 		position: absolute;
 		/* Top/left values mimic padding */
 		top: 6px;
 		left: 6px;
-		width: 45%; 
-		padding-right: 10px; 
+		width: 45%;
+		padding-right: 10px;
 		white-space: nowrap;
 		text-align:center;
 
 	}
- 
+
 	/*
 	Label the data
 	*/
@@ -824,7 +833,7 @@ li.media	{ margin-bottom:10px;border-bottom:1px solid #ddd;  padding-bottom:10px
 
 .boxer_image img{
 	border:1px solid #ccc;
-	padding:2px;	
+	padding:2px;
 }
 .pading_0{
 	padding:0;
@@ -930,7 +939,7 @@ margin: 4px 0 0 0;
 }
 .newsletter11
 {
-	color:#2172a7;	
+	color:#2172a7;
 }
 
 .subscribe_btn{width:100%;float:left;text-align:center;margin-left:8px;}
@@ -941,12 +950,12 @@ margin: 4px 0 0 0;
 .sidebar_blog h3.widget-title
 {
 	display:none;
-	
+
 	}
 
 .width-100
 {
-		width:100%;	
+		width:100%;
 }
 
 /*******coded by Sahil Johar************/
@@ -959,7 +968,7 @@ margin: 4px 0 0 0;
 	margin:15px 0;
 	width:100%;
 	text-align:left;
-	color:#73ac4b;	
+	color:#73ac4b;
 }
 .form_otr{
 	float:left;
@@ -1036,20 +1045,20 @@ margin: 4px 0 0 0;
 }
 .hdr_logo_div{
 	padding: 10px;
-	float: left;	
+	float: left;
 	}
 
 .questn_div{
 	float: left;
 	width: 100%;
-	margin-bottom: 10px;	
+	margin-bottom: 10px;
 	}
 .questn_div h2{
 	font-size:20px;
 	margin:15px 0 8px 0;
 	width:100%;
 	text-align:left;
-	color:#333;	
+	color:#333;
 	}
 .ad_error {
     color: red;
@@ -1075,11 +1084,11 @@ margin: 4px 0 0 0;
 /****** Sponsor Page Start *****/
 
 .sponsor_div
-{	
+{
 float:left;
 width:100%;
 }
-.sponsor_div ul 
+.sponsor_div ul
 {
     float: left;
     padding: 0;
@@ -1093,7 +1102,7 @@ width:100%;
     padding-bottom: 10px;
 }
 
-.sponsor_img 
+.sponsor_img
 {
     box-sizing: border-box;
     float: left;
@@ -1101,7 +1110,7 @@ width:100%;
     padding: 0 10px 0 0;
     width: 203px;
 }
-.sponsor_img img 
+.sponsor_img img
 {
 	width: 100%;
 }
@@ -1116,10 +1125,10 @@ width:100%;
 	float: right;
     position: relative;
     right: -50px;
-    
+
     width: 29%;
 }
-.sponsor_des h3 
+.sponsor_des h3
 {
     color: #000000;
     float: left;
@@ -1128,7 +1137,7 @@ width:100%;
     padding: 0 0 5px;
     width: 100%;
 }
-.sponsor_des p 
+.sponsor_des p
 {
 	line-height: 16px;
     color: #444444;
@@ -1137,7 +1146,7 @@ width:100%;
     margin: 0;
     padding: 0;
 }
-.sponsor_des p a 
+.sponsor_des p a
 {
     font-size: 12px;
     margin: 0 0 0 5px;
@@ -1165,7 +1174,7 @@ width:100%;
 {
 		margin:0px !important;
 		width:auto !important;
-			
+
 }
 
 
@@ -1198,17 +1207,17 @@ font-family:serif;
 
 .trs ul{
 	width: 100%;
-	 float: left;	
+	 float: left;
 	}
 .trs ul li {
 	width: 100%;
-	float: left;	
+	float: left;
 	border-bottom: none;
 	margin-bottom: 5px;
 	}
 
 .df{
-	width: 100%;	
+	width: 100%;
 	}
 
 .df h3{
@@ -1218,15 +1227,32 @@ font-family:serif;
 	}
 .df p{
 	width: auto;
-	float: left;	
+	float: left;
 	}
 .img_outer_ban img {
     max-height: 100px;
 }
 .company_adds img {
     max-height: 100px;
-}	
-
 }
 
-
+#no-more-tables .head-name {
+  color: #fff !important;
+}
+#no-more-tables .head-name:hover {
+  color: #fff;
+}
+#no-more-tables .head-action {
+  width: 135px;
+}
+#pagination-box {
+  text-align:right;
+  margin-right:10px;
+  clear:both;
+}
+#pagination-box a {
+  margin-right: 5px;
+}
+#pagination-box a:last-of-type {
+  margin-right: 0px;
+}
