--- a/app/components/profileNavSection/view.html
+++ b/app/components/profileNavSection/view.html
@@ -6,14 +6,14 @@
         <li>
           <div class="img_outer_user_pic">
             <div class="img_inner_user_pic">
-              <img ng-src="{{ $ctrl.profilePic }}" class="img-circle"/>
+              <img ng-src="{{ $ctrl.profilePic }}" class="img-circle" />
             </div>
           </div>
         </li>
 
         <!-- Navigation-->
         <li ng-repeat="link in $ctrl.links">
-          <a ng-href="{{ link.href }}" class="bg_list_page_search">
+          <a ui-sref="{{ link.uiSref }}" class="bg_list_page_search">
             {{ link.name }}
           </a>
         </li>
@@ -23,7 +23,9 @@
   <!--  sidebar main ends  -->
   <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 ">
     <div class="banner_adjust">
-      <a href="http://www.eliterehabplacement.com/?__hstc=72872396.c6e500094d8caf5286795ce028269ed0.1487869992992.1488995709683.1489001730804.35&amp;__hssc=72872396.3.1489001730804&amp;__hsfp=161465595"><img class="" src="http://www.addictionnetwork.com/wp-content/uploads/advertisement_images/small/1428613459-anadlisting.jpg"></a>
+      <a href="http://www.eliterehabplacement.com/?__hstc=72872396.c6e500094d8caf5286795ce028269ed0.1487869992992.1488995709683.1489001730804.35&amp;__hssc=72872396.3.1489001730804&amp;__hsfp=161465595">
+        <img class="" src="http://www.addictionnetwork.com/wp-content/uploads/advertisement_images/small/1428613459-anadlisting.jpg">
+      </a>
     </div>
   </div>
 
