--- a/app/bannerAds/view/main/view.html
+++ b/app/bannerAds/view/main/view.html
@@ -1,7 +1,7 @@
 <div class="col-md-8 col-sm-8 col-xs-12 col-lg-9">
   <div class="row">
     <div class="left_content">
-      <form name="advertisementEditForm" >
+      <form name="advertisementEditForm">
         <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
           <div class="middle_content_div">
             <div class="container">
@@ -20,7 +20,9 @@
                           <li class="width-100">
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                               <div class="sponsor_img">
-                                <a class="thumbnail" href="" target="blank"><img src="{{$ctrl.content}}"></a>
+                                <a class="thumbnail" href="" target="blank">
+                                  <img src="{{$ctrl.content}}">
+                                </a>
                               </div>
                               <div class="sponsor_img" style="width:45%;">
                                 <h3>{{$ctrl.position}} </h3>
@@ -48,7 +50,9 @@
   <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
     <div class="company_adds margin_top_25">
       <div class="company_adds">
-        <a href="http://www.monarchshores.com"><img class="img-responsive" src="uploads/advertisement_images/medium/1428518360-MonarchAN.jpg"></a>
+        <a href="http://www.monarchshores.com">
+          <img class="img-responsive" src="uploads/advertisement_images/medium/1428518360-MonarchAN.jpg">
+        </a>
       </div>
     </div>
   </div>
