fixed sidebar search on homepage

--- a/app/components/profileNavSection/view.html
+++ b/app/components/profileNavSection/view.html
@@ -23,9 +23,7 @@
   <!--  sidebar main ends  -->
   <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 ">
     <div class="banner_adjust">
-      <a href="http://www.eliterehabplacement.com/?__hstc=72872396.c6e500094d8caf5286795ce028269ed0.1487869992992.1488995709683.1489001730804.35&amp;__hssc=72872396.3.1489001730804&amp;__hsfp=161465595">
-        <img class="" src="http://www.addictionnetwork.com/wp-content/uploads/advertisement_images/small/1428613459-anadlisting.jpg">
-      </a>
+      <img class="img-responsive" id="sidebar_ad">
     </div>
   </div>
 
