--- a/app/treatmentCenterDetail/style.css
+++ b/app/treatmentCenterDetail/style.css
@@ -30,3 +30,55 @@
 .contact_info_wrap_div img {
   margin-bottom : 10px;
 }
+
+.review-rating {
+  margin: 5px 0 0 0;
+  width: 100%;
+}
+
+.review-rating img {
+  width: 20px;
+}
+
+.review_star {
+  margin: 7px 0 0 0;
+}
+
+.review-list-box {
+  border-bottom: 1px solid #eaeaea;
+  padding-bottom: 10px;
+}
+
+.review-list-box h2 {
+  width: 100%;
+  color: #73AC4B;
+  font-size: 16px;
+}
+
+.review-list-box p {
+  width: 100%;
+  margin: 5px 0 0 0;
+}
+
+.review-list-box p a {
+  margin-bottom: 7px;
+  font-family: 'oswaldbook';
+}
+
+.review-list-box p a span {
+  margin: 0 7px 0 0;
+}
+
+.review-form-box .show-hide {
+  max-height: 300px;
+}
+
+.review-form-box .show-hide.ng-hide {
+  max-height: 0px;
+}
+
+.review-form-box .show-hide.ng-hide-add,
+.review-form-box .show-hide.ng-hide-remove {
+  overflow: hidden;
+  transition: max-height linear 0.3s;
+}
