--- a/app/components/statusView/view.html
+++ b/app/components/statusView/view.html
@@ -1,3 +1,3 @@
-<div class="status-view animate-show-hide" ng-show="$ctrl.visible">
+<div class="status-view status-show-hide" ng-show="$ctrl.visible">
   <p ng-class="$ctrl.style">{{ $ctrl.message }}</p>
 </div>
