Added multiselect in sponsor and banner ads

--- a/app/bannerAds/view/main/view.html
+++ b/app/bannerAds/view/main/view.html
@@ -38,7 +38,7 @@
                       <!-- Treatment Directory -->
                     </div>
                   </div>
-                  <a href="/#/banner-ads" class="pull-right modal_btn btn btn-primary margin_bottom_15_add text-right"> Back</a>
+                  <a href="/#/my-profile/banner-ads" class="pull-right modal_btn btn btn-primary margin_bottom_15_add text-right"> Back</a>
                 </div>
               </div>
             </div>
