--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -561,13 +561,8 @@ p {
   width: 100%;
   float: left;
   background: #F2F2F2;
-  margin-top: 38px;
-  padding: 12px 30px 0 30px;
-}
-
-.padding_0 .cont_right {
-  padding-bottom: 20px;
-  margin-top: 22px;
+  margin-top: 30px;
+  padding: 12px 30px 12px 30px;
 }
 
 .right_content>h2 {
