added a new page for all cities of a state

--- a/app/myProfile/sponsorAds/view/view.html
+++ b/app/myProfile/sponsorAds/view/view.html
@@ -10,7 +10,7 @@
                   <div class="left_content left_align" style="margin-top: 0px;">
                     <div class="row">
                       <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                        <h1 class="listing_content">
+                        <h1 class="section-heading">
                           <label>{{$ctrl.title}}</label>
                         </h1>
                       </div>
