--- a/app/myProfile/bannerAds/view/view.html
+++ b/app/myProfile/bannerAds/view/view.html
@@ -10,7 +10,7 @@
                   <div class="left_content left_align" style="margin-top: 0px;">
                     <div class="row">
                       <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                        <h1 class="listing_content">
+                        <h1 class="section-heading">
                           <label>{{$ctrl.name}}</label>
                         </h1>
                       </div>
@@ -32,7 +32,7 @@
                         </ul>
                       </div>
                       <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                        <h1 class="listing_content">
+                        <h1 class="section-heading">
                         </h1>
                       </div>
                       <!-- Treatment Directory -->
