--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -537,21 +537,6 @@ p {
   text-align: center;
 }
 
-.left_content h1 {
-  background: url("../images/title-striped-bg.png");
-  background-repeat: repeat-x;
-  text-align: center;
-  background-position: 40px;
-  font-size: 28px;
-  margin-bottom: 10px;
-}
-
-.left_content h1>label {
-  background: #fff;
-  padding: 0 16px 0 0;
-  color: #73ac4b;
-}
-
 .left_content>p {
   font-family: arial;
   color: #555;
@@ -630,14 +615,30 @@ p {
   padding: 0px 13px 0 13px;
 }
 
-.left_content .listing_content {
-  text-align: left;
+.section-heading {
+  background: url(../images/title-striped-bg.png);
+  background-repeat: repeat-x;
+  text-align: center;
+  background-position: 40px;
+  font-size: 28px;
   margin-top: 38px;
   margin-bottom: 20px;
 }
 
-.left_content .listing_content>label {
-  padding-left: 0;
+.section-heading label {
+  background: #fff;
+  padding: 0 16px;
+  color: #73ac4b;
+}
+
+.sub-section-heading {
+  background: url(../images/title-striped-bg.png);
+  background-repeat: repeat-x;
+  text-align: center;
+  background-position: 40px;
+  font-size: 24px;
+  margin-top: 38px;
+  margin-bottom: 20px;
 }
 
 .block_heading {
