--- a/app/myProfile/bannerAds/view/view.html
+++ b/app/myProfile/bannerAds/view/view.html
@@ -10,11 +10,8 @@
                   <div class="left_content left_align" style="margin-top: 0px;">
                     <div class="row">
                       <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                        <h1 class="section-heading">
-                          <label>{{$ctrl.name}}</label>
-                        </h1>
+                        <section-heading>{{$ctrl.name}}</section-heading>
                       </div>
-                      <!------ Sponsor Listing -------->
                       <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 sponsor_div">
                         <ul class="width-100">
                           <li class="width-100">
