--- a/app/treatmentCenterDetail/style.css
+++ b/app/treatmentCenterDetail/style.css
@@ -1,3 +1,12 @@
+.center-detail-map-address {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.center-detail-card {
+  padding: 12px 15px;
+}
+
 .center-detail-side {
   color: #444;
   float: left;
@@ -28,7 +37,7 @@
 }
 
 .contact_info_wrap_div img {
-  margin-bottom : 10px;
+  margin-bottom: 10px;
 }
 
 .review-rating {
@@ -81,8 +90,7 @@
   max-height: 0px;
 }
 
-.review-form-box .review-form.ng-hide-add,
-.review-form-box .review-form.ng-hide-remove {
+.review-form-box .review-form.ng-hide-add, .review-form-box .review-form.ng-hide-remove {
   overflow: hidden;
   transition: max-height linear 0.3s;
 }
