--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -1093,25 +1093,6 @@ h3.sub_heading_under_sign_up {
 
 /* Listing Page     */
 
-.heading_main_div h2 {
-  background: url("../images/title-striped-bg.png") repeat-x scroll 40px center rgba(0, 0, 0, 0);
-  font-size: 28px;
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.heading_main_div {
-  float: left;
-  width: 100%;
-  margin-top: 15px;
-}
-
-.heading_main_div label {
-  background: none repeat scroll 0 0 #ffffff;
-  color: #73ac4b;
-  padding: 0 16px;
-}
-
 .sidebar_main {
   float: left;
   width: 100%;
@@ -1351,22 +1332,6 @@ h3.sub_heading_under_sign_up {
   width: 37px !important;
 }
 
-.img_outer_ban {
-  float: left;
-  width: 100%;
-  padding: 8px 15px 15px;
-}
-
-.img_outer_ban img {
-  float: left;
-  width: 100%;
-  box-shadow: 0 0 6px #444;
-  -webkit-box-shadow: 0 0 6px #444;
-  -moz-box-shadow: 0 0 6px #444;
-  -ms-box-shadow: 0 0 6px #444;
-  -o-box-shadow: 0 0 6px #444
-}
-
 #fwslider .slide img {
   max-width: 100% !important;
 }
@@ -1557,26 +1522,8 @@ h3.sub_heading_under_sign_up {
   margin-right: 0px
 }
 
-.img_outer_ban {
-  padding: 8px 5px 15px 15px !important;
-}
-
-
-/*  30July  */
-
 
 /*    Profile    */
-
-.profile_label2 {
-  color: #444;
-  width: 100%;
-  text-align: left;
-  font-size: 15px;
-  font-family: 'Arial';
-  word-wrap: break-word;
-  padding-top: 8px;
-  display: inline-block;
-}
 
 .img_outer_user_pic {
   float: left;
@@ -1673,22 +1620,12 @@ h3.sub_heading_under_sign_up {
 }
 
 
-/*    Account Settings    */
-
-
 /*    Add Treatment Center       */
 
 .class_for_select .bootstrap-select>.btn {
   height: 40px;
   font-size: 14px;
 }
-
-.margin_top_25 {
-  margin-top: 25px;
-}
-
-
-/*    Add Treatment Center       */
 
 
 /* my Center View */
@@ -1728,10 +1665,6 @@ h3.sub_heading_under_sign_up {
   width: 100%;
 }
 
-.margin_top_adjust_go {
-  margin-top: 13px;
-}
-
 .text_style_about {
   float: left;
   width: 100%;
@@ -1741,10 +1674,6 @@ h3.sub_heading_under_sign_up {
   font-family: 'Arial';
   text-decoration: none;
   display: inline-block;
-}
-
-.margin_bottom_adjust_go {
-  margin-bottom: 15px;
 }
 
 .display_full {
@@ -2183,10 +2112,6 @@ li.media {
   padding: 2px;
 }
 
-.pading_0 {
-  padding: 0;
-}
-
 .contct_heding {
   color: #73ac4b;
   padding: 16px 0;
@@ -2228,10 +2153,6 @@ li.media {
   margin: 0;
   padding-bottom: 5px;
   width: auto;
-}
-
-.margin-bottom-20 {
-  margin-bottom: 15px;
 }
 
 .page-numbers.current {
@@ -2373,77 +2294,6 @@ address {
   width: 100%;
 }
 
-
-/*******coded by Sahil Johar************/
-
-.main_heading_h2 {
-  font-size: 28px;
-  margin: 15px 0;
-  width: 100%;
-  text-align: left;
-  color: #73ac4b;
-}
-
-.form_otr {
-  float: left;
-  width: 100%;
-}
-
-.pading_0 {
-  padding: 0;
-}
-
-.inner_h2_main {
-  background: url("../images/title-striped-bg.png") repeat-x scroll 40px center rgba(0, 0, 0, 0);
-  font-size: 28px;
-  margin: 25px 0 25px 0;
-  text-align: center;
-}
-
-.inner_h2_main label {
-  background: none repeat scroll 0 0 #ffffff;
-  color: #73ac4b;
-  padding: 0 16px;
-}
-
-.input_maggin_botom {
-  margin-bottom: 10px;
-}
-
-.form_otr label {
-  font-weight: normal;
-}
-
-.conti_btn {
-  background: #73ac4b;
-  border-color: #73ac4b;
-  margin-left: 5px;
-  min-width: 100px;
-  border-radius: 50px;
-  float: right;
-}
-
-.conti_btn:hover, .conti_btn:focus, .conti_btn:active {
-  background: #58aa22;
-  border-color: #73ac4b
-}
-
-.slct_div {
-  float: left;
-  width: 100%;
-}
-
-.info_div {
-  float: left;
-  width: 100%;
-}
-
-.info_div label {
-  float: left;
-  margin: 0 10px 0 0;
-  width: 125px;
-}
-
 .info {
   float: left;
   width: 70%;
@@ -2463,18 +2313,6 @@ address {
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 20px;
-}
-
-.list-unstyled1 {
-  margin: 0 0 0 28px;
-  padding: 0;
-}
-
-.list-unstyled1 li {
-  font-size: 14px;
-  line-height: 24px;
-  list-style-image: url("../images/check.png");
-  margin: 0 0 5px 0;
 }
 
 .multi {
@@ -2502,12 +2340,6 @@ address {
   width: 100%;
   text-align: left;
   color: #333;
-}
-
-.ad_error {
-  color: red;
-  font-style: normal;
-  margin: 0 0 0 5px;
 }
 
 .email_pass_error {
@@ -2650,18 +2482,7 @@ address {
 /*  css by palwinder 05-11-2014 */
 
 .left_content.left_align li {
-  background: url("https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-right-01-16.png") no-repeat scroll left top rgba(0, 0, 0, 0);
-  line-height: 125%;
-  list-style-position: outside;
-  list-style-type: none;
-  margin: 10px 0;
-  padding: 0 0 1px 25px;
-  vertical-align: middle;
-  font-family: serif;
-}
-
-.liststyle li {
-  background: url("https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-right-01-16.png") no-repeat scroll left top rgba(0, 0, 0, 0);
+  background: url("themes/addiction/images/arrow-right-01-16.png") no-repeat scroll left top rgba(0, 0, 0, 0);
   line-height: 125%;
   list-style-position: outside;
   list-style-type: none;
@@ -2698,10 +2519,6 @@ address {
   float: left;
 }
 
-.img_outer_ban img {
-  max-height: 100px;
-}
-
 .company_adds img {
   max-height: 100px;
 }
@@ -2734,6 +2551,69 @@ label.error {
 
 .left {
   float: left;
+}
+
+.margin-top-15 {
+  margin-top: 15px;
+}
+
+.margin-bottom-10 {
+  margin-bottom: 10px;
+}
+
+.adn-row {
+  margin-bottom: 10px;
+  min-height: 1p;
+  position: relative;
+  box-sizing: border-box;
+}
+
+.adn-row:before, .adn-row:after {
+  display: table;
+  content: " ";
+}
+
+.adn-row:after {
+  clear: both;
+}
+
+.adn-row p {
+  float: left;
+  width: 100%;
+  padding: 10px 0 0 0;
+  font-size: 16px;
+}
+
+.adn-row label {
+  font-weight: normal;
+  font-size: 16px;
+  padding-top: 10px;
+  color: #2172a7;
+  float: left;
+}
+
+.adn-row input {
+  border: 1px solid #ccc;
+  font-weight: normal;
+  float: left;
+  width: 100%;
+}
+
+.adn-row input.form-control::-moz-placeholder {
+  color: #ccc;
+}
+
+.adn-row input.form-control::-webkit-input-placeholder {
+  color: #ccc;
+}
+
+.adn-row input.form-control::-ms-input-placeholder {
+  color: #ccc;
+}
+
+.adn-row textarea {
+  resize: none;
+  border: 1px solid #ccc;
 }
 
 .checkboxInput {
