--- a/app/components/sectionHeading/style.css
+++ b/app/components/sectionHeading/style.css
@@ -7,7 +7,7 @@
   margin: 20px 0;
 }
 
-.section-heading label {
+.section-heading-label {
   background: #fff;
   padding: 0 16px;
   color: #73ac4b;
