--- a/app/components/sectionHeading/view.html
+++ b/app/components/sectionHeading/view.html
@@ -1,5 +1,5 @@
 <h1 class="section-heading">
-  <label>
+  <label class="section-heading-label">
     <ng-transclude></ng-transclude>
   </label>
 </h1>
