--- a/app/treatmentCenterDetail/style.css
+++ b/app/treatmentCenterDetail/style.css
@@ -1,3 +1,12 @@
+.center-detail-content {
+  width: 100%;
+  text-align: left;
+  color: #444;
+  font-size: 14px;
+  font-family: 'Arial';
+  padding: 0 15px;
+}
+
 .center-detail-link {
   float: left;
   width: auto;
@@ -10,40 +19,46 @@
 }
 
 .center-detail-card {
-  padding: 12px 15px;
+  margin-top: 30px;
+  background-color: #f2f2f2;
+  padding: 12px 5px;
 }
 
-.center-detail-side {
+.center-detail-contact-info {
+  margin-top: 15px;
+}
+
+.center-detail-contact-info-row {
   color: #444;
-  float: left;
+  /*float: left;*/
   width: 100%;
 }
 
-.center-detail-side span {
+.center-detail-contact-info-row:not(:first-child) {
+  margin-top: 15px;
+}
+
+.center-detail-contact-info-row span {
   border-bottom: 1px solid #444444;
-  float: left;
   font-family: "oswaldbook";
   font-size: 18px;
   padding-bottom: 5px;
   width: 100%;
+  display: block;
 }
 
-.center-detail-side p {
+.center-detail-contact-info-row p {
   font-family: 'Arial';
   font-size: 16px;
-  float: left;
   width: 100%;
+  margin-top: 5px;
 }
 
-.center-detail-side i {
+.center-detail-contact-info-row i {
   color: #115a8f;
   font-size: 18px;
-  font-family: "Glyphicons Halflings" !important;
+  font-family: "Glyphicons Halflings";
   margin-right: 10px;
-}
-
-.contact_info_wrap_div img {
-  margin-bottom: 10px;
 }
 
 .inquiry-form-label {
