--- a/app/myProfile/bannerAds/view/view.html
+++ b/app/myProfile/bannerAds/view/view.html
@@ -2,7 +2,7 @@
   <section-heading>{{$ctrl.name}}</section-heading>
   <div class="profile-row">
     <a ui-sref="myProfile.bannerAds">
-      <span class="btn btn-primary adn-btn right">
+      <span class="btn adn-btn right">
         <i class="glyphicon glyphicon-hand-left"></i> Back
       </span>
     </a>
