--- a/app/components/cardHeading/style.css
+++ b/app/components/cardHeading/style.css
@@ -8,7 +8,7 @@
   margin-bottom: 15px;
 }
 
-.card-heading label {
+.card-heading-label {
   background: #F2F2F2;
   font-size: 15px;
   padding: 0px 18px 3px 19px;
