--- a/app/myProfile/paymentDetails/view/view.html
+++ b/app/myProfile/paymentDetails/view/view.html
@@ -3,43 +3,41 @@
     <div class="left_content">
       <form name="advertisementEditForm">
         <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-          <div class="middle_content_div">
-            <div class="container">
-              <div class="row">
-                <div class="col-lg-8 col-sm-8 col-md-8 col-xs-12">
-                  <div class="left_content left_align" style="margin-top: 0px;">
-                    <div class="row">
-                      <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                        <h1 class="section-heading">
-                          <label>{{$ctrl.name}}</label>
-                        </h1>
-                      </div>
-                      <!------ Sponsor Listing -------->
-                      <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 sponsor_div">
-                        <ul class="width-100">
-                          <li class="width-100">
-                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                              <div class="sponsor_img">
-                                <a class="thumbnail" href="{{$ctrl.center_web_link | urlFilter}}" target="blank">
-                                  <img src="{{$ctrl.content}}">
-                                </a>
-                              </div>
-                              <div class="sponsor_img" style="width:45%;">
-                                <h3>{{$ctrl.position}} </h3>
-                              </div>
-                            </div>
-                          </li>
-                        </ul>
-                      </div>
-                      <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                        <h1 class="section-heading">
-                        </h1>
-                      </div>
-                      <!-- Treatment Directory -->
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 col-sm-8 col-md-8 col-xs-12">
+                <div class="left_content left_align" style="margin-top: 0px;">
+                  <div class="row">
+                    <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+                      <h1 class="section-heading">
+                        <label>{{$ctrl.name}}</label>
+                      </h1>
                     </div>
+                    <!------ Sponsor Listing -------->
+                    <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 sponsor_div">
+                      <ul class="width-100">
+                        <li class="width-100">
+                          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <div class="sponsor_img">
+                              <a class="thumbnail" href="{{$ctrl.center_web_link | urlFilter}}" target="blank">
+                                <img src="{{$ctrl.content}}">
+                              </a>
+                            </div>
+                            <div class="sponsor_img" style="width:45%;">
+                              <h3>{{$ctrl.position}} </h3>
+                            </div>
+                          </div>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+                      <h1 class="section-heading">
+                      </h1>
+                    </div>
+                    <!-- Treatment Directory -->
                   </div>
-                  <a href="/#/my-profile/banner-ads" class="pull-right modal_btn btn btn-primary margin_bottom_15_add text-right"> Back</a>
                 </div>
+                <a href="/#/my-profile/banner-ads" class="btn adn-btn right"> Back</a>
               </div>
             </div>
           </div>
