--- a/app/myProfile/style.css
+++ b/app/myProfile/style.css
@@ -1,11 +1,9 @@
 .center-logo-in-tb {
   font-family: 'Helvetica';
   font-weight: 300;
-  line-height: 2;
   text-align: center;
-  width: 100%;
-  height: auto;
-  display: block;
+  width: auto;
+  max-height: 180px;
   position: relative;
 }
 
