--- a/app/addListing/style.scss
+++ b/app/addListing/style.scss
@@ -18,14 +18,130 @@
       left: 0;
     }
     .zoomIn{
-      transition: 2s linear all;
-      -webkit-transition: 2s linear all;
+      -webkit-animation: fadein 20s; /* Safari, Chrome and Opera > 12.1 */
+      -moz-animation: fadein 20s; /* Firefox < 16 */
+      -ms-animation: fadein 20s; /* Internet Explorer */
+      -o-animation: fadein 20s; /* Opera < 12.1 */
+      animation: fadein 20s;
     }
-    .zoomIn.ng-enter {
-      opacity: 0;
+
+    @keyframes fadein {
+      from {
+        -webkit-transition: all 200ms ease-in;
+        -webkit-transform: scale(0.5);
+        -ms-transition: all 200ms ease-in;
+        -ms-transform: scale(0.5);
+        -moz-transition: all 200ms ease-in;
+        -moz-transform: scale(0.5);
+        transition: all 200ms ease-in;
+        transform: scale(0.5);
+      }
+      to   {
+        -webkit-transition: all 200ms ease-in;
+        -webkit-transform: scale(1);
+        -ms-transition: all 200ms ease-in;
+        -ms-transform: scale(1);
+        -moz-transition: all 200ms ease-in;
+        -moz-transform: scale(1);
+        transition: all 200ms ease-in;
+        transform: scale(1);
+      }
     }
-    .zoomIn.ng-leave {
-      opacity: 1;
+
+    /* Firefox < 16 */
+    @-moz-keyframes fadein {
+      from {
+        -webkit-transition: all 200ms ease-in;
+        -webkit-transform: scale(0.5);
+        -ms-transition: all 200ms ease-in;
+        -ms-transform: scale(0.5);
+        -moz-transition: all 200ms ease-in;
+        -moz-transform: scale(0.5);
+        transition: all 200ms ease-in;
+        transform: scale(0.5);
+      }
+      to   {
+        -webkit-transition: all 200ms ease-in;
+        -webkit-transform: scale(1);
+        -ms-transition: all 200ms ease-in;
+        -ms-transform: scale(1);
+        -moz-transition: all 200ms ease-in;
+        -moz-transform: scale(1);
+        transition: all 200ms ease-in;
+        transform: scale(1);
+      }
+    }
+
+    /* Safari, Chrome and Opera > 12.1 */
+    @-webkit-keyframes fadein {
+      from {
+        -webkit-transition: all 200ms ease-in;
+        -webkit-transform: scale(0.5);
+        -ms-transition: all 200ms ease-in;
+        -ms-transform: scale(0.5);
+        -moz-transition: all 200ms ease-in;
+        -moz-transform: scale(0.5);
+        transition: all 200ms ease-in;
+        transform: scale(0.5);
+      }
+      to   {
+        -webkit-transition: all 200ms ease-in;
+        -webkit-transform: scale(1);
+        -ms-transition: all 200ms ease-in;
+        -ms-transform: scale(1);
+        -moz-transition: all 200ms ease-in;
+        -moz-transform: scale(1);
+        transition: all 200ms ease-in;
+        transform: scale(1);
+      }
+    }
+
+    /* Internet Explorer */
+    @-ms-keyframes fadein {
+      from {
+        -webkit-transition: all 200ms ease-in;
+        -webkit-transform: scale(0.5);
+        -ms-transition: all 200ms ease-in;
+        -ms-transform: scale(0.5);
+        -moz-transition: all 200ms ease-in;
+        -moz-transform: scale(0.5);
+        transition: all 200ms ease-in;
+        transform: scale(0.5);
+      }
+      to   {
+        -webkit-transition: all 200ms ease-in;
+        -webkit-transform: scale(1);
+        -ms-transition: all 200ms ease-in;
+        -ms-transform: scale(1);
+        -moz-transition: all 200ms ease-in;
+        -moz-transform: scale(1);
+        transition: all 200ms ease-in;
+        transform: scale(1);
+      }
+    }
+
+    /* Opera < 12.1 */
+    @-o-keyframes fadein {
+      from {
+        -webkit-transition: all 200ms ease-in;
+        -webkit-transform: scale(0.5);
+        -ms-transition: all 200ms ease-in;
+        -ms-transform: scale(0.5);
+        -moz-transition: all 200ms ease-in;
+        -moz-transform: scale(0.5);
+        transition: all 200ms ease-in;
+        transform: scale(0.5);
+      }
+      to   {
+        -webkit-transition: all 200ms ease-in;
+        -webkit-transform: scale(1);
+        -ms-transition: all 200ms ease-in;
+        -ms-transform: scale(1);
+        -moz-transition: all 200ms ease-in;
+        -moz-transform: scale(1);
+        transition: all 200ms ease-in;
+        transform: scale(1);
+      }
     }
   }
 }
